# mail-sink

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cli.rs  http.rs  main.rs  smtp.rs  snowflake.rs
src/pages/: panel.html  preview.html
src/smtp/: mail.rs
src/tests/: mod.rs  parsing_tester.rs
test/samples/: discord_mail.body  raw.body
