[package]
name = "mail-sink"
version = "0.1.0"
edition = "2021"
authors = ["UwUDev"]

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-rustls = "0.23" # TODO: update to 0.26
rustls = "0.23.13"
rustls-pemfile = "1.0" # TODO: update to 2.1.3
futures = "0.3.30"
tokio-util = { version = "0.7.12", features = ["codec"] }
bytes = "1.7.2"
url = "2.5.2"
sled = "0.34.7"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.128"
clap-help = "1.3.0"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
psutil = "3.3.0"
sysinfo = "0.31.4"
num_cpus = "1.16.0"
percent-encoding = "2.3.1"
mailparse = "0.13"
lazy_static = "1.5.0"
rfc2047-decoder = "1.0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
